fix sidebar on collapse and add basic classes/styling for references-sidebar

--- a/src/styles/components/editor.scss
+++ b/src/styles/components/editor.scss
@@ -1,6 +1,6 @@
-@import "../colors/colors.scss";
 
-@layer components {
+@import '../colors/colors.scss';
+
 .compactEditorContent {
   .tiptap.ProseMirror > * {
     margin-left: 0 !important;
@@ -485,5 +485,4 @@
       }
     }
   }
-}
 }
